--- a/portfollio/index.html
+++ b/portfollio/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- //animation ke liye -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> 
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Soni</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init(
+        {
+          offset: 200,
+          duration:1300 
+        }
+      );
+    </script>
   </body>
 </html>
